File: plugins/nexus-onboarding-plugin/src/test/java/org/sonatype/nexus/onboarding/internal/OnboardingStateContributorTest.java