@@ -12,7 +12,7 @@
  */
 package org.sonatype.nexus.onboarding.internal;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
 import org.sonatype.goodies.testsupport.TestSupport;
@@ -21,15 +21,20 @@ import org.sonatype.nexus.onboarding.OnboardingItem;
 import org.sonatype.nexus.onboarding.OnboardingManager;
 import org.sonatype.nexus.security.config.AdminPasswordFileManager;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.nullValue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.Mockito.when;
 
+/**
+ * Tests for {@link OnboardingStateContributor}.
+ */
+@ExtendWith(MockitoExtension.class)
 public class OnboardingStateContributorTest
     extends TestSupport
 {
@@ -50,10 +55,10 @@ public class OnboardingStateContributorTest
 
   private OnboardingStateContributor underTest;
 
-  @Before
+  @BeforeEach
   public void setup() {
     when(onboardingConfiguration.isEnabled()).thenReturn(true);
-    when(onboardingManager.getOnboardingItems()).thenReturn(Arrays.asList(onboardingItem1, onboardingItem2));
+    when(onboardingManager.getOnboardingItems()).thenReturn(List.of(onboardingItem1, onboardingItem2));
     when(onboardingManager.needsOnboarding()).thenReturn(true);
     when(adminPasswordFileManager.exists()).thenReturn(true);
     when(adminPasswordFileManager.getPath()).thenReturn("path/to/file");
@@ -64,9 +69,9 @@ public class OnboardingStateContributorTest
   @Test
   public void testGetState() {
     Map<String, Object> state = underTest.getState();
-    assertThat(state.size(), is(2));
-    assertThat(state.get("onboarding.required"), is(true));
-    assertThat(state.get("admin.password.file"), is("path/to/file"));
+    assertEquals(2, state.size());
+    assertEquals(true, state.get("onboarding.required"));
+    assertEquals("path/to/file", state.get("admin.password.file"));
   }
 
   @Test
@@ -74,24 +79,24 @@ public class OnboardingStateContributorTest
     when(onboardingManager.needsOnboarding()).thenReturn(false);
     when(adminPasswordFileManager.exists()).thenReturn(false);
 
-    assertThat(underTest.getState(), nullValue());
+    assertNull(underTest.getState());
   }
 
   @Test
   public void testGetState_cacheOnboardingState() {
     Map<String, Object> state = underTest.getState();
-    assertThat(state.get("onboarding.required"), is(true));
+    assertEquals(true, state.get("onboarding.required"));
 
     when(onboardingManager.needsOnboarding()).thenReturn(false);
 
     state = underTest.getState();
-    assertThat(state.get("onboarding.required"), nullValue());
+    assertNull(state.get("onboarding.required"));
 
-    //set to true to validate that cache kicks in and still doesn't add data to the map
+    // Set to true to validate that cache kicks in and still doesn't add data to the map
     when(onboardingManager.needsOnboarding()).thenReturn(true);
 
     state = underTest.getState();
-    assertThat(state.get("onboarding.required"), nullValue());
+    assertNull(state.get("onboarding.required"));
   }
 
   @Test
@@ -99,6 +104,17 @@ public class OnboardingStateContributorTest
     when(adminPasswordFileManager.exists()).thenReturn(false);
 
     Map<String, Object> state = underTest.getState();
-    assertThat(state.get("admin.password.file"), nullValue());
+    assertNull(state.get("admin.password.file"));
+  }
+  
+  @Test
+  public void testGetState_onlyAdminPasswordFile() {
+    when(onboardingManager.needsOnboarding()).thenReturn(false);
+    when(adminPasswordFileManager.exists()).thenReturn(true);
+    
+    Map<String, Object> state = underTest.getState();
+    assertEquals(1, state.size());
+    assertEquals("path/to/file", state.get("admin.password.file"));
+    assertNull(state.get("onboarding.required"));
   }
 }
